triggers/el-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triggers-ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: el-gitlab-event-listener
                port:
                  number: 8080
